recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:10: error: type mismatch;
 found   : Int
 required: List[Int]
  return min(l.tail.head)
                    ^Min:12: error: value title is not a member of List[Int]
  return min(l.title)
               ^